@@ -17,7 +17,7 @@
 #include "cvs.h"
 
 /* C99 Headers.  */
-#include <stdint.h>
+#include <inttypes.h>
 
 /* GNULIB Headers.  */
 #include "getline.h"
@@ -1096,9 +1096,6 @@ handle_copy_file (char *args, size_t len)
  *   1.  As strtoumax().
  *   2.  If the number read exceeds SIZE_MAX.
  */
-#ifndef HAVE_STRTOUMAX
-uintmax_t strtoumax (const char *, char **, int);
-#endif
 static size_t
 strto_file_size (const char *s)
 {
