@@ -1,3 +1,8 @@
+2006-04-12  Derek Price  <derek@ximbiot.com>
+
+	* client.c: Include inttypes.h unconditionally.
+	(strto_file_size): Remove strtoumax() proto.
+
 2006-04-09  Mark D. Baushke  <mdb@gnu.org>
 
 	* client.c (strto_file_size): Add prototype for strtoumax() for
